force-app/main/default/objects/Sales_Consumption__c/Sales_Consumption__c.object-meta.xml
<CustomObject>
    <label>Sales Consumption</label>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>Sales Consumption Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Consumptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>