force-app/main/default/objects/Sales_Consumption__c/fields/Manual_Date_Test__c.field-meta.xml
<CustomField>
    <fullName>Manual_Date_Test__c</fullName>
    <label>Manual Date Test</label>
    <type>Date</type>
</CustomField>