force-app/main/default/objects/Sales_Consumption__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Sales Consumptions</relationshipLabel>
    <relationshipName>Sales_Consumptions</relationshipName>
    <type>Lookup</type>
</CustomField>