force-app/main/default/objects/Sales_Consumption__c/fields/Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Sales Consumptions</relationshipLabel>
    <relationshipName>Sales_Consumptions</relationshipName>
    <type>Lookup</type>
</CustomField>