force-app/main/default/objects/Sales_Consumption__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Sales Consumptions</relationshipLabel>
    <relationshipName>Sales_Consumptions</relationshipName>
    <type>Lookup</type>
</CustomField>