force-app/main/default/objects/Sales_Consumption__c/fields/Product_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Product_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Inventory</label>
    <referenceTo>ProductItem</referenceTo>
    <relationshipLabel>Sales Consumptions</relationshipLabel>
    <relationshipName>Sales_Consumptions</relationshipName>
    <type>Lookup</type>
</CustomField>