force-app/main/default/objects/Sales_Consumption__c/fields/Quantity_Consumed__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Consumed__c</fullName>
    <label>Quantity Consumed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>