force-app/main/default/objects/Sales_Consumption__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>Order_Product__c</columns>
    <columns>Dealer__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Inventory__c</columns>
    <columns>Quantity_Consumed__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Manual_Date_Test__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Dealer__c</field>
        <operation>contains</operation>
        <value>River Mobility</value>
    </filters>
    <label>All</label>
</ListView>